docs/error.log
  File "/home/hqureshi/Documents/Webserv/cgi-bin/cgi-script-2.py", line 26
    gfgfdgdg:
             ^
SyntaxError: invalid syntax
